--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,11 @@
         </activity>
         <activity android:name=".YouTubeActivity">
         </activity>
+
+        <provider
+            android:name=".data.MovieContentProvider"
+            android:authorities="com.example.android.popularmoviesapp"
+            android:exported="false"/>
     </application>
 
 </manifest>
